[PM-136] Added common sidebar class, button letter spacing fix

--- a/price-map/apps/frontend/src/app/modules/map/components/route-review/route-review.component.scss
+++ b/price-map/apps/frontend/src/app/modules/map/components/route-review/route-review.component.scss
@@ -52,6 +52,7 @@
   @include font(1.5rem, white);
   margin-top: 0;
   width: 100%;
+  letter-spacing: .1rem;
 }
 
 ::ng-deep.nb-theme-cosmic nb-badge.status-success {
